--- a/Encontro01/Material.ipynb
+++ b/Encontro01/Material.ipynb
@@ -7,7 +7,7 @@
     "editable": false
    },
    "source": [
-    "<div style=\"background-color: #fff1cd; background-image: url('../socnet.svg'); background-position: 1em 1em; background-repeat: no-repeat; background-size: 3em 3em; box-shadow: 0 0 0.25em 0; color: #403c33; font-weight: bold; min-height: 3em; padding: 1em 1em 1em 5em;\">Como o nome sugere, você deve usar este notebook como um *caderno de anotações*. Use as células editáveis para tomar notas, principalmente quando os professores estiverem complementando o conteúdo com exposições orais ou exposições na lousa. Crie um *fork* pessoal do repositório, faça *commits* dessas notas e puxe do *upstream* sempre que o repositório for atualizado. Se alguma atualização modificar um notebook existente, essa modificação não envolverá as células editáveis, portanto não causará conflito.</div>"
+    "<div style=\"background-color: #fff1cd; background-image: url('../socnet.svg'); background-position: 1em 1em; background-repeat: no-repeat; background-size: 3em 3em; box-shadow: 0 0 0.25em 0; color: #403c33; font-weight: bold; min-height: 3em; padding: 1em 1em 1em 5em;\">Como o nome sugere, você deve usar este notebook como um *caderno de anotações*. Use as células editáveis para tomar notas, principalmente quando os professores estiverem complementando o conteúdo com exposições orais ou exposições na lousa. Crie um *branch* pessoal do repositório, faça *commits* dessas notas e faça um *merge* sempre que o repositório for atualizado. Se alguma atualização modificar um notebook existente, essa modificação não envolverá as células editáveis, portanto não causará conflito.</div>"
    ]
   },
   {
@@ -325,7 +325,9 @@
    "metadata": {
     "deletable": false
    },
-   "source": []
+   "source": [
+    "Na minha opinião uma pesquisa pode sim ser considerada boa mesmo quando não corroborar com as hipóteses prévias. Pesquisas servem não apenas para confirmar hipóteses anteriores, mas também para explorar novos caminhos abrindo novas possibilidades e como consequência, novas possíveis hipóteses. No mínimo, uma pesquisa que não confirme a hipóteses inicial, pode ao menos confirmar que a pesquisa não serviu para corroborar o pensamento anterior."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -385,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
